--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         Rua São Paulo, 11 CPA 2 Cuiabá-MT 78055-574 ·
                         <a href="mailto:name@email.com">rodrigo.sjhs@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">Minha trajetória profissional reflete um ambiente dinâmico e adaptativo, onde abraçar o ousado é essencial para evoluir continuamente. Navegar nesse cenário impulsionado pela tecnologia tem sido uma constante inspiração.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
