--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">LJM Tecnologia</h3>
                             <div class="subheading mb-3">CEO</div>
-                            <p>Atuando em contexto de Cloud Computing e DevOps de uma fábrica de Software.</p>
+                            <p>Atuando em contexto de Cloud Computing e DevOps em uma fábrica de Software.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">fevereiro de 2023 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Analista de Infraestrutura Senior I</h3>
                             <div class="subheading mb-3">Log Lab Inteligência Digital</div>
-                            <p>Atuando em contexto de Cloud Computing e DevOps de uma fábrica de Software.</p>
+                            <p>Atuando em contexto de Cloud Computing e DevOps em uma fábrica de Software.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
                     </div>
