--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             <div class="subheading mb-3">Log Lab Inteligência Digital</div>
                             <p>Atuando em contexto de Cloud Computing e DevOps em uma fábrica de Software.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">julho de 2021 - janeiro de 2023</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
